--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -22,7 +22,7 @@
 /* Select the image inside the element with an id of basket (using its descendent relationship) */
 
 /*__write_selector_here__
-#3*/ {
+#3*/#basket img {
   position: absolute;
   z-index: 5;
   top: 291px;
