--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -32,7 +32,7 @@
 /* Select the image based on it being a sibling that follows immediately after the element with an id of ball (using adjacent sibling selector) */
 
 /*__write_selector_here__
-#4*/ {
+#4*/ #ball + img{
   position: absolute;
   z-index: 4;
   top: 260px;
