--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -42,7 +42,7 @@
 /* Select the image that has an attribute value matching "Kitty 5" (using attribute selector) */
 
 /*__write_selector_here__
-#5*/#kitty 5 {
+#5*/images/kitty-5.png {
   position: absolute;
   z-index: 3;
   top: 217px;
